--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <section class="calculator">
     <section class="fields">
       <h1>BMI 計算機</h1>
-      <h2>想要健康嗎？趕快動起來！</h2>
+      <h2>想要健康嗎？趕快動起來！別坐在家裡了</h2>
       <div>
         <label for="bodyHeight">身高</label>
         <input type="number" id="bodyHeight" min="0">公分
